<resources>
	<!-- 
    Created On: 14th July
    Contribution: Samrakchan Ghimire,
    Version 1.0
     -->
    <string name="app_name">Yatayat</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_yatayat">Yatayat</string>
    
    <string name="start_point">Start From\:</string>
    <string name="end_point">Destination\:</string>
    
    <string name="find_vehicle">Find Vehicle</string>
    
    <string name="na"></string>
    <string name="no_internet">Please connect to internet\!</string>
    
    <string name="main_loading">Loading data from server\.\.\.</string>
    <string name="route_loading">Loading avilable vehicles</string>

</resources>