<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <!-- 
    Created On: 14th July
    Contribution: Samrakchan Ghimire,
    Version 1.0
     -->
    <LinearLayout 
        android:id="@+id/actionbar_ll"
        android:layout_alignParentTop="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    	<include android:id="@+id/actionbar" layout="@layout/merge_actionbar" />
    </LinearLayout>
    
    <ScrollView
        android:id="@+id/main_sv"
        android:layout_below="@+id/actionbar_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" >
	    
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="3dp"
	        
	        >
	                
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/start_point"
		        tools:context=".YatayatActivity"
		        android:layout_marginTop="2dp"
		        android:maxWidth="200dp" 
		         />
		
		    <AutoCompleteTextView
		        android:id="@+id/start_point_et"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:completionThreshold="1"
		        android:ems="10"
		        android:hint="@string/na"
		        android:imeOptions="actionNext"
		        android:lines="1"
		        android:maxWidth="200dp"
		        android:singleLine="true"
		        android:textColor="@color/black" />
		    
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/end_point"
		        tools:context=".YatayatActivity"
		        android:layout_marginTop="2dp"
		        android:maxWidth="200dp" />
		    
		    <AutoCompleteTextView
		        android:id="@+id/end_point_et"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="2dp"
		        android:completionThreshold="1"
		        android:ems="10"
		        android:hint="@string/na"
		        android:imeOptions="actionDone"
		        android:lines="1"
		        android:maxWidth="200dp"
		        android:singleLine="true"
		        android:textColor="@color/black" />
		    	
		    <Button
		        android:id="@+id/find_vehicle_b"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/find_vehicle"
		        android:layout_marginTop="2dp"
		        android:maxWidth="200dp"
		        style="@style/Button" />
	    
	    </LinearLayout>
    </ScrollView>
    <ScrollView
        android:id="@+id/no_internet_sv"
        android:layout_below="@+id/actionbar_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" >
	    <TextView android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:text="@string/no_internet"
	        />
	</ScrollView>
	<ScrollView
        android:id="@+id/loading_sv"
        android:layout_below="@+id/actionbar_ll"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >
	    <LinearLayout android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:padding="10dp">
	    
	    <TextView
		    android:id="@+id/loading_tv"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:text="@string/main_loading" />
	    
	    <ProgressBar
	        android:id="@+id/loading_pb"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:indeterminate="true"
	        android:layout_gravity="center" />
	    
	    </LinearLayout>
	</ScrollView>

	

</RelativeLayout>
